update users functions
